--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 <img src="shade.jpg" alt="Shade">
             </div>
             <div class="photo-frame">
-                <img src="us.jpg" alt="Together">
+                <img src="us.JPG" alt="Together">
             </div>
             <div class="photo-frame">
-                <img src="shadow.jpg" alt="Shadow">
+                <img src="shadow.JPG" alt="Shadow">
             </div>
         </div>
     </section>
@@ -271,4 +271,5 @@
         updateTimer(); // Run immediately on load
     </script>
 </body>
+
 </html>
